--- a/ClientEmulator/ClientEmulator/Pages/Index.cshtml
+++ b/ClientEmulator/ClientEmulator/Pages/Index.cshtml
@@ -1,9 +1,19 @@
 ﻿@page
 <div class="container">
     <div class="row">&nbsp;</div>
-    <div class="row">
-        <div class="col-2">Device id</div>
-        <div class="col-4"><input type="text" id="device" /></div>
+    <div class="form-row">
+        <div class="col-3">
+            <input id="device-id" type="text" class="form-control" placeholder="Device Id">
+        </div>
+        <div class="col-3">
+            <input id="password" type="text" class="form-control" placeholder="Password">
+        </div>
+        <div class="col-3">
+            <input type="button" id="send-device-id" value="Set Device Id" />
+        </div>
+        <div class="col-3" id="send-device-id-result">
+            
+        </div>
     </div>
     <div class="row">
         <div class="col-2">Command</div>
