--- a/ClientEmulator/ClientEmulator/Pages/Index.cshtml
+++ b/ClientEmulator/ClientEmulator/Pages/Index.cshtml
@@ -1,43 +1,137 @@
 ﻿@page
-<div class="container">
-    <div class="row">&nbsp;</div>
-    <div class="form-row">
-        <div class="col-3">
-            <input id="device-id" type="text" class="form-control" placeholder="Device Id">
-        </div>
-        <div class="col-3">
-            <input id="password" type="text" class="form-control" placeholder="Password">
-        </div>
-        <div class="col-3">
-            <input type="button" id="send-device-id" value="Set Device Id" />
-        </div>
-        <div class="col-3" id="send-device-id-result">
-            
-        </div>
+
+<div class="card">
+    <div class="card-header">
+        Connection status
     </div>
-    <div class="row">
-        <div class="col-2">Command</div>
-        <div class="col-4"><input type="text" id="command" /></div>
-    </div>
-    <div class="row">
-        <div class="col-2">Value</div>
-        <div class="col-4"><input type="text" id="value" /></div>
-    </div>
-    <div class="row">&nbsp;</div>
-    <div class="row">
-        <div class="col-6">
-            <input type="button" id="send" value="Send Message" />
+    <div class="card-body">
+        <div class="row">
+            <div class="col-3">SignalR status</div>
+            <div class="col-3" id="signalr-status"></div>
+        </div>
+        <div class="row">
+            <div class="col-3">Mqtt status</div>
+            <div class="col-3" id="send-device-id-result">
+            </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-12">
-        <hr />
+
+<div class="card">
+    <div class="card-header">
+        Device Commands
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="form-group col-3">
+                <label for="device-id">Device Id</label>
+                <input id="device-id" type="text" class="form-control">
+            </div>
+            <div class="form-group col-3">
+                <label for="password">Device Id</label>
+                <input id="password" type="text" class="form-control">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <button class="btn btn-secondary form-control" type="button" id="send-device-id">Set Device Id</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-3">
+                <label for="device-id">Command</label>
+                <select id="command" class="form-control">
+                    <option selected></option>
+                    <option value="1000">1000 (Inside temperature)</option>
+                    <option value="1001">1001 (Outside temperature)</option>
+                    <option value="1010">1010 (Has outside temperature sensor)</option>
+                    <option value="1011">1011 (Outside temperature)</option>
+                    <option value="1020">1020 (Water temperature)</option>
+                    <option value="4040">4040 (IsOperational)</option>
+                    <option value="4050">4050 (SilentMode)</option>
+                    <option value="8000">8000 (Machine is broken)</option>
+                    <option value="9000">9000 (SerialNumber)</option>
+                </select>
+            </div>
+            <div class="form-group col-3">
+                <label for="device-id">Value</label>
+                <input id="value" type="text" class="form-control">
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-3">
+                <button class="btn btn-secondary" type="button" id="send">Send Message</button>
+            </div>
+            <div class="col-3" id="send-result">
+            </div>
+        </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-6">
-        <ul id="messages"></ul>
+<div class="card">
+    <div class="card-header">
+        Device Send
+    </div>
+    <div class="card-body">
+        <ul class="overflow-auto" style="max-height: 300px" id="send-messages"></ul>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header">
+        Device Receive
+    </div>
+    <div class="card-body">
+        <ul class="overflow-auto" style="max-height: 300px" id="messages"></ul>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header">
+        Device State
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">1000 (Inside temperature)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-1000">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">1001 (Outside temperature)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-1001">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">1010 (Has outside temperature sensor)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-1010">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">1011 (Outside temperature)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-1011">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">1020 (Water temperature)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-1020">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">2000 (OperationTimeInSec)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-2000">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">2010 (WorkingHour)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-2010">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">4040 (IsOperational)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-4040">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">4050 (SilentMode)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-4050">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">8000 (Machine is broken)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-8000">
+        </div>
+        <div class="row">
+            <label class="col-3 col-form-label" for="exampleInputEmail1">9000 (SerialNumber)</label>
+            <input type="email" class="col-3 form-control" readonly id="state-9000">
+        </div>
     </div>
 </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
